<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Crotello.  Please do not copy without authorisation.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">
    <!-- TODO: Add the rest of the flight details to date
        Will it be a tabbed page?
        -->





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flight_number_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/flightNumberHint"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/flight_id_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text=""
            android:visibility="invisible" />
    </LinearLayout>

    <EditText
        android:id="@+id/setFlightNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/flightNumberHint"
        android:inputType="textCapCharacters"
        android:background="@android:color/transparent"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:textAllCaps="true"
        android:textSize="16sp"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewTakeOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/takeOffIcon"
            app:srcCompat="@drawable/ic_flight_takeoff" />

        <TextView
            android:id="@+id/setFlightDepartureDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/setDepartureDateHint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/setFlightAtd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:background="@android:color/transparent"
            android:gravity="end"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/setDepartureTimeHint"
            android:textAlignment="textEnd"
            android:textSize="16sp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageViewLand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/landIcon"
            app:srcCompat="@drawable/ic_flight_land" />
        <TextView
            android:id="@+id/setFlightArrivalDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:text="@string/setArrivalDateHint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/setFlightAta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/setArrivalTimeHint"
            android:textAlignment="textEnd"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/totalFlightTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/totalFLightTimelabel"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/totalFlightTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:textSize="16sp" />


    </LinearLayout>


    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteFlight"
            android:text="@string/btn_delete" />

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveFlight"
            android:text="@string/Save" />
    </LinearLayout>

</LinearLayout>
