<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Crotello.  Please do not copy without authorisation.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flight_number_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:hint="@string/flightNumberHint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/flight_id_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:visibility="invisible"
            android:text=""/>

    </LinearLayout>

    <EditText
        android:id="@+id/setFlightNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/flightNumberHint"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:inputType="textNoSuggestions"
        android:fontFamily="sans-serif" />

    <TextView
        android:id="@+id/departure_details_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/departure_details_label"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setFlightDepartureDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/setFlightAtd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/arrival_details_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text=        "@string/arrival_details_label"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/setFlightArrivalDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/setFlightAta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        style="?attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/buttonBarButtonStyle"
        android:text="@string/btn_update" />

    </LinearLayout>

</LinearLayout>