<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <!--This file is used in the ListView to summarise a flight.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flight_number_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/flightNumberHint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/flight_id_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:visibility="invisible"
            android:text=""/>
    </LinearLayout>


    <TextView
        android:id="@+id/flight_number_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp"
        android:text=""
        android:hint="@string/flightNumberHint"
        android:textAllCaps="true"
        android:fontFamily="sans-serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewTakeOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/takeOffIcon"
            app:srcCompat="@drawable/ic_flight_takeoff" />

        <TextView
            android:id="@+id/departure_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@android:color/transparent"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="00/00/0000"

            android:textSize="16sp" />

        <TextView
            android:id="@+id/departure_time_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.43"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="00:00"
            android:textAlignment="textEnd"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageViewLand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/landIcon"
            app:srcCompat="@drawable/ic_flight_land" />

        <TextView
            android:id="@+id/arrival_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="00/00/0000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/arrival_time_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="00:00"
            android:textAlignment="textEnd"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>